--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-paper": "^4.10.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
-    "react-native-vector-icons": "^9.0.0"
+    "react-native-vector-icons": "^9.0.0",
+    "rn-slider-switch": "^0.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
