--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,6 +15,8 @@ target 'Mobile' do
   pod 'react-native-maps', :path => '../node_modules/react-native-maps'
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
   target 'MobileTests' do
     inherit! :complete
     # Pods for testing
