--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.66.2",
     "react-native-dropdown-picker": "^5.2.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.6.0",
     "react-native-maps": "^0.29.3",
     "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.10.0",
