--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "base-64": "^1.0.0",
     "react": "17.0.2",
-    "react-native": "0.66.2",
+    "react-native": "^0.66.4",
     "react-native-dropdown-picker": "^5.2.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.6.0",
