--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,8 +28,17 @@ target 'Mobile' do
   # you should disable the next line.
   use_flipper!()
 
-  post_install do |installer|
-    react_native_post_install(installer)
-    __apply_Xcode_12_5_M1_post_install_workaround(installer)
+#  post_install do |installer|
+#    react_native_post_install(installer)
+#    __apply_Xcode_12_5_M1_post_install_workaround(installer)
+#  end
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    if target.respond_to?(:product_type) and target.product_type == "com.apple.product-type.bundle"
+      target.build_configurations.each do |config|
+          config.build_settings['CODE_SIGNING_ALLOWED'] = 'NO'
+      end
+    end
   end
+end
 end
